Tutorial1/TreeTop_Html/simple_html.treetop
grammar SimpleHTML
    rule document
      (text / tag )*  {
        def content
          elements.map{ |e| e.content }
        end
      }
    end

    rule text
      [^<]+  {
        def content
          [:text, text_value]
        end
      }
    end

    rule tag
      "<" [^>]+ ">" {
        def content
           [:text, text_value]
        end
      }
    end
end
